--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ui",
-  "version": "0.1.0",
+  "name": "recipe-finder-ui",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
